[package]
name = "zkp_iam_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bellman = "0.12.0"
pairing = "0.21.0"
bls12_381 = "0.4.0"
rand = "0.8.0"
poseidon-rs = "0.0.10"
